# ssl-storage

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml_example  docker-bake.hcl  domains.json_example  install.sh
.github/workflows/: build.yaml  release.yaml
others/systemd/: ssl-storage.service
src/: config.rs  domain_reader.rs  errors.rs  lib.rs  main.rs
src/storage/: file.rs  mod.rs  redis.rs
